bk_ida/gccida/c0/add_stored_regs
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/add_stored_regs/src/caller-save.c:989:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+28h] [rbp-28h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/add_stored_regs/src/caller-save.c:1003:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)reg->fld[0].rtwint), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/add_stored_regs/src/caller-save.c:1003:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)reg->fld[0].rtwint), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/add_stored_regs/src/caller-save.c:1005:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)reg)); 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/add_stored_regs/src/caller-save.c:1005:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)reg)); 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/add_stored_regs/src/caller-save.c:1049:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[mode] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/add_stored_regs/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/add_stored_regs/src/caller-save.c:1050:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v11 = mode_class_0[mode] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/add_stored_regs/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/add_stored_regs/src/obj/caller-save.o] Error 1
